--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
             </tr>
             <tr>
                 <td>
-                    <label for="text">Gender :-</label>
-                    <input type="radio">Male
-                    <input type="radio">Female
+                    <label for="Gender">Gender :-
+                        <label for="male"><input type="radio" name="gender" id="male">male</label>
+                  <label for="female"><input type="radio" name="gender" id="female">female</label>
+                    </label>
                 </td>
 
 
