--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <html>
 
 <head>
-
 </head>
 
 <body>
     <form>
         <table align="center">
-            <tr bgcolor="yellow">
-                <td>
+            <tr bgcolor="orange">
+                <td colspan="2" style="color:yellow">
                     sign up
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="text">First Name :-</label>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="text">First Name :-</label></td>
+                    <td>
                     <input type="text" required placeholder="Enter your Name">
 
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="Last name">Last Name :-</label>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="Last name">Last Name :-</label></td>
+                    <td>
                     <input type="text" required placeholder="Enter Your Last Name">
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="date of birth">Date Of Birth :-</label>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="date of birth">Date Of Birth :-</label></td>
+                    <td>
                     <select>
                         <option value="date">Date</option>
                         <option value="date">1</option>
@@ -90,19 +92,20 @@
                     </select>
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="Gender">Gender :-
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="Gender">Gender :-</label></td>
+                    <td style="color:yellow">
                         <label for="male"><input type="radio" name="gender" id="male">male</label>
-                  <label for="female"><input type="radio" name="gender" id="female">female</label>
+                        <label for="female"><input type="radio" name="gender" id="female">female</label>
                     </label>
                 </td>
 
 
-            </tr>
-            <tr>
-                <td>
-                    <label for="country">Country :-</label>
+            </td>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="country">Country :-</label><td>
                     <select>
                         <option value="text">Country</option>
                         <option value="text">India</option>
@@ -110,33 +113,50 @@
                         <option value="text">Pakistan</option>
                         <option value="text">USA</option>
 
+
                     </select>
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="Email">Email :-</label>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="Email">Email :-</label></td>
+                    <td>
                     <input type="email" required placeholder="Enter your Email">
                 </td>
             </tr>
-            <tr>
-                <TD>
-                    <label for="number">Phone :-</label>
+            <tr bgcolor="darkblue">
+                <TD style="color:yellow">
+                    <label for="number">Phone :-</label></TD>
+                    <td>
                     <input type="number" required placeholder="Enter your Number">
                 </TD>
             </tr>
-            <tr>
-                <td>
-                    <label for="password">password :-</label>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="password">password :-</label></td>
+                    <td>
                     <input type="password" required placeholder="Enter your password">
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="password">Confirm Password :-</label>
+            <tr bgcolor="darkblue">
+                <td style="color:yellow">
+                    <label for="password">Confirm Password :-</label></td>
+                    <td>
                     <input type="password" required placeholder="Enter your password">
                 </td>
             </tr>
+            <tr align="right" bgcolor="darkblue">
+                <td style="color:yellow" colspan="2">
+                  <input type="checkbox">I Agree to the terms of use</input>
+                </td>
+            </tr>
+            <tr bgcolor="orange">
+                <td colspan="2" align="right">
+                    <button style="background-color: green;color:white;"submit">Submit</button>
+                    <button style="background-color: red;color:white;"cancel">Cancel</button>
+                </td>
+            </tr>
+            
 
     </form>
 </body>
